--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "devstart": "nodemon ./bin/www",
     "serverstart": "DEBUG=express-locallibrary-tutorial:* npm run devstart",
     "build": "browserify webmap.js -o public/javascripts/webmap.js & cp node_modules/leaflet/dist/leaflet.css public/stylesheets/leaflet.css & cp node_modules/leaflet-draw/dist/leaflet.draw-src.css public/stylesheets/leaflet-drw.css & cp node_modules/leaflet-draw/dist/leaflet.draw.css public/stylesheets/leafletdrw-drw.css",
-    "lint": "eslint app.js"
+    "lint": "eslint app.js",
+    "watch": "watch 'npm run build' ."
   },
   "dependencies": {
     "axios": "^0.27.2",
@@ -21,7 +22,8 @@
     "leaflet-draw-drag": "^0.4.8",
     "morgan": "~1.9.1",
     "sequelize": "^6.37.1",
-    "sqlite3": "^5.1.7"
+    "sqlite3": "^5.1.7",
+    "watch": "^1.0.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.23.9",
