--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-draw-drag": "^0.4.8",
+    "leaflet-realtime": "^2.2.0",
     "morgan": "~1.9.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
