--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DEV_DATABASE_URL=postgres://postgres:12345@localhost:5432/panapp_db
 TEST_DATABASE_URL=postgres://postgres:12345@localhost:5432/test_panapp_db
 DATABASE_URL=postgres://postgres:12345@localhost:5432/production_panapp_db
 NODE_ENV=development
+FIRMS_API_KEY=2c0278b3819dba0978450671b302b2a6
