--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "leaflet": "^1.9.4",
     "leaflet-draw": "^1.0.4",
     "leaflet-draw-drag": "^0.4.8",
+    "leaflet-filelayer": "^1.2.0",
     "leaflet-realtime": "^2.2.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "morgan": "~1.9.1",
