--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "express": "~4.16.1",
+    "express-session": "^1.18.0",
     "leaflet": "^1.9.4",
     "leaflet-control-window": "^1.0.0",
     "leaflet-dialog": "^1.0.5",
@@ -40,6 +41,7 @@
     "leaflet-realtime": "^2.2.0",
     "leaflet-rotatedmarker": "^0.2.0",
     "morgan": "~1.9.1",
+    "pbkdf2-password": "^1.2.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.3",
